[gd_scene load_steps=11 format=3 uid="uid://cqsdcf5me2cg5"]

[ext_resource type="Script" path="res://scenes/menu_screen/menu_screen.gd" id="1_qgbdt"]
[ext_resource type="Texture2D" uid="uid://cssnxv45rixml" path="res://assets/images/bg/bananabg.jpg" id="2_bkcf5"]
[ext_resource type="PackedScene" uid="uid://dptws66hjix4d" path="res://scenes/options/options_popup.tscn" id="2_f0ms4"]
[ext_resource type="FontFile" uid="uid://dgxx5aynta82t" path="res://assets/fonts/Grandstander/static/Grandstander-Bold.ttf" id="2_ofaev"]
[ext_resource type="StyleBox" uid="uid://dc5o608cwl0h4" path="res://themes/ButtonClicker.tres" id="4_1w3u3"]
[ext_resource type="StyleBox" uid="uid://vjtxoqynrqki" path="res://themes/ButtonClickerHover.tres" id="5_2x1o8"]
[ext_resource type="StyleBox" uid="uid://sq3u18qe2ice" path="res://themes/ButtonClickerDisabled.tres" id="6_1tivt"]
[ext_resource type="StyleBox" uid="uid://dx4dtm5phsmgq" path="res://themes/ButtonClickerPressed.tres" id="6_xcndk"]
[ext_resource type="StyleBox" uid="uid://boqn7cn3qrrsg" path="res://themes/ButtonClickerFocus.tres" id="7_0krw0"]

[sub_resource type="Theme" id="Theme_hqfj8"]
default_font = ExtResource("2_ofaev")
default_font_size = 46

[node name="MenuScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qgbdt")

[node name="Options" parent="." instance=ExtResource("2_f0ms4")]
layout_mode = 1

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("2_bkcf5")
expand_mode = 3
stretch_mode = 6

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 64

[node name="TitleSubtitle" type="CenterContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/TitleSubtitle"]
layout_mode = 2

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer/TitleSubtitle/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_hqfj8")
theme_override_font_sizes/font_size = 130
text = "Banana Clicker"
horizontal_alignment = 1

[node name="Subtitle" type="Label" parent="MarginContainer/VBoxContainer/TitleSubtitle/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_hqfj8")
theme_override_font_sizes/font_size = 55
text = "Definitive Remastered Edition"
horizontal_alignment = 1

[node name="Buttons" type="CenterContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Buttons"]
layout_mode = 2

[node name="ButtonStart" type="Button" parent="MarginContainer/VBoxContainer/Buttons/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 36
theme_override_styles/normal = ExtResource("4_1w3u3")
theme_override_styles/hover = ExtResource("5_2x1o8")
theme_override_styles/pressed = ExtResource("6_xcndk")
theme_override_styles/disabled = ExtResource("6_1tivt")
theme_override_styles/focus = ExtResource("7_0krw0")
text = "Jouer"

[node name="ButtonOptions" type="Button" parent="MarginContainer/VBoxContainer/Buttons/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/normal = ExtResource("4_1w3u3")
theme_override_styles/hover = ExtResource("5_2x1o8")
theme_override_styles/pressed = ExtResource("6_xcndk")
theme_override_styles/disabled = ExtResource("6_1tivt")
theme_override_styles/focus = ExtResource("7_0krw0")
text = "Options"

[node name="ButtonAbout" type="Button" parent="MarginContainer/VBoxContainer/Buttons/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/normal = ExtResource("4_1w3u3")
theme_override_styles/hover = ExtResource("5_2x1o8")
theme_override_styles/pressed = ExtResource("6_xcndk")
theme_override_styles/disabled = ExtResource("6_1tivt")
theme_override_styles/focus = ExtResource("7_0krw0")
text = "A propos"

[node name="ButtonExit" type="Button" parent="MarginContainer/VBoxContainer/Buttons/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/normal = ExtResource("4_1w3u3")
theme_override_styles/hover = ExtResource("5_2x1o8")
theme_override_styles/pressed = ExtResource("6_xcndk")
theme_override_styles/disabled = ExtResource("6_1tivt")
theme_override_styles/focus = ExtResource("7_0krw0")
text = "Quitter"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Buttons/VBoxContainer/ButtonStart" to="." method="_on_button_start_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Buttons/VBoxContainer/ButtonOptions" to="." method="_on_button_options_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Buttons/VBoxContainer/ButtonAbout" to="." method="_on_button_about_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Buttons/VBoxContainer/ButtonExit" to="." method="_on_button_exit_pressed"]
